# llm-fundamentals

./: LICENSE  README.md  pyproject.toml
notebooks/examples/: example_rag.ipynb
notebooks/exercises/: exercise_1_manual_request.ipynb  exercise_2_embeddings.ipynb  exercise_3_pdf_rag.ipynb
