[project]
name = "llm-fundamentals"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "ipykernel>=6.29.5",
    "lancedb>=0.13.0",
    "phidata>=2.4.37",
    "ipywidgets>=8.1.5",
    "ollama>=0.3.3",
    "beautifulsoup4>=4.12.3",
    "openai>=1.51.0",
    "pandas>=2.2.3",
]

[tool.ruff]
line-length = 100
